having problems when adding a food amount and then pressing a button and then the drop down value gets lost

--- a/TrackMyMacros.App2/Components/MealComponent2.razor
+++ b/TrackMyMacros.App2/Components/MealComponent2.razor
@@ -2,7 +2,7 @@
 @foreach( var foodAmount in @Meal.FoodAmounts)
 {
     Debug.WriteLine(foodAmount.Quantity);
-    <MealFoodItemComponent @ref="ComponentRef" OnRemove="RemoveFoodItem" Quantity="@foodAmount.Quantity" FoodId="@foodAmount.FoodId"></MealFoodItemComponent>
+    <MealFoodItemComponent @ref="ComponentRef" OnRemove="RemoveFoodItem" Quantity="@foodAmount.Quantity" FoodId="@foodAmount.FoodId" Guid="@foodAmount.Guid"></MealFoodItemComponent>
 }
 
 <RadzenButton Click="@OnAddFood"  Text="Add Food" ButtonStyle="ButtonStyle.Primary" />
