--- a/TrackMyMacros.App2/Components/MealFoodItemComponent.razor
+++ b/TrackMyMacros.App2/Components/MealFoodItemComponent.razor
@@ -14,8 +14,8 @@
             <span>
                 <strong>C</strong>@(Food.Value.CarbohydrateAmount * @Quantity / 100)
             </span>
+            <RadzenButton Click="@RemoveFood" Text="Remove" ButtonStyle="ButtonStyle.Primary"/>
         </div>
-        <RadzenButton Click="@OnRemoveFood" Text="Add Food" ButtonStyle="ButtonStyle.Primary"/>
 
     </RadzenCard>
 }
