--- a/TrackMyMacros.App2/Pages/Day.razor
+++ b/TrackMyMacros.App2/Pages/Day.razor
@@ -17,7 +17,7 @@ else
 
 
 <RadzenButton Click="@OnSave" Text="Save" ButtonStyle="ButtonStyle.Primary"/>
-<RadzenButton Click="@OnSave2" Text="Save2" ButtonStyle="ButtonStyle.Primary"/>
+<RadzenButton Click="@OnAddMeal" Text="Add Meal" ButtonStyle="ButtonStyle.Primary"/>
 
 
 @if (_noFoodIdSelectedOnOneOrMoreFoodItems)
