--- a/TrackMyMacros.App2/Shared/NavMenu.razor
+++ b/TrackMyMacros.App2/Shared/NavMenu.razor
@@ -36,7 +36,7 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="CreateOrUpdateDailyLimits">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Create or Update Daily Macro Limits
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Macros
             </NavLink>
         </div>
         <div class="nav-item px-3">
