--- a/TrackMyMacros.App2/Pages/Index.razor
+++ b/TrackMyMacros.App2/Pages/Index.razor
@@ -1,5 +1,8 @@
 ﻿@page "/"
+@using Microsoft.AspNetCore.Components.WebAssembly.Hosting
+@inject IWebAssemblyHostEnvironment env
 
+Environment is @env.Environment
 <PageTitle>Index</PageTitle>
 
 <h1>Hello, world!</h1>
