--- a/TrackMyMacros.App2/Shared/NavMenu.razor
+++ b/TrackMyMacros.App2/Shared/NavMenu.razor
@@ -40,6 +40,11 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="MacrosDay">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Macros Day
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="Day">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Day
             </NavLink>
