Move remaning macros completed

--- a/TrackMyMacros.App2/Components/FoodListItemComponent.razor
+++ b/TrackMyMacros.App2/Components/FoodListItemComponent.razor
@@ -1,7 +1,25 @@
 ﻿<RadzenCard Style="width: 100%; padding: 0;">
-    <div>
+    <div class="row">
+        <div class="col-2">
+            
+        </div>
+                <div class="col-2">
+                    
+                </div>
+        <div class="col-2">
+            
+        </div>
+        <div class="col-2">
+            
+        </div>
+        <div class="col-2">
+            
+        </div>
+        <div class="col-2">
+            
+        </div>
+
         Name <RadzenTextBox @bind-Value="@FoodListItemViewModel.Name">Name</RadzenTextBox>
-        Quantity : <RadzenNumeric TValue="double" @bind-Value=@FoodListItemViewModel.Quantity></RadzenNumeric> g
         Fat : <RadzenNumeric TValue="double" @bind-Value=@FoodListItemViewModel.Fat></RadzenNumeric> g
         Protein : <RadzenNumeric TValue="double" @bind-Value=@FoodListItemViewModel.Protein></RadzenNumeric> g
         Carbs : <RadzenNumeric TValue="double" @bind-Value=@FoodListItemViewModel.Carbohydrate></RadzenNumeric> g
