--- a/TrackMyMacros.App2/Components/MealComponent.razor
+++ b/TrackMyMacros.App2/Components/MealComponent.razor
@@ -1,5 +1,5 @@
 ﻿@using System.Diagnostics
-@foreach( var foodAmount in @Meal.FoodAmounts)
+@foreach( var foodAmount in Meal.FoodAmounts)
 {
     Debug.WriteLine(foodAmount.Quantity);
     <MealFoodItemComponent @Quantity="@foodAmount.Quantity" @FoodId="foodAmount"></MealFoodItemComponent>
