--- a/TrackMyMacros.App2/Components/MealComponent2.razor
+++ b/TrackMyMacros.App2/Components/MealComponent2.razor
@@ -1,19 +1,45 @@
 ﻿@using System.Diagnostics
-<RadzenCard>
+@* <RadzenCard> *@
+<div class="container">
     @foreach (var foodAmount in @Meal.FoodAmounts)
     {
         <MealFoodItemComponent SelectedFoodId="@foodAmount.FoodId" OnQuantitiesChanged="@OnQuantitiesChanged" OnRemove="RemoveFoodItem" FoodAmount="@foodAmount"></MealFoodItemComponent>
     }
-    <RadzenButton Click="@OnAddFood" Text="Add Food" ButtonStyle="ButtonStyle.Primary"/>
+    <div class="row py-1">
+        <div class="col-2">
+            <RadzenButton Click="@OnAddFood" Icon="add" ButtonStyle="ButtonStyle.Primary"/>
+        </div>
+        <div class="col-5">
+            <RadzenButton Text="Move Macros" ButtonStyle="ButtonStyle.Secondary" Click=@ShowInlineDialog/>
+        </div>
+        <div class="col-5">
+            <RadzenButton Click="@OnSave" Text="Save" ButtonStyle="ButtonStyle.Primary"/>
+        
+        </div>
+    </div>
 
-    Total Protein: @Double.Round(@Meal.Protein, 2)
-    <text>/</text>
-    @AllowedProtein.Value
-    Carbs: @Double.Round(Meal.Carbohydrate, 2)
-    <text>/</text>
-    @AllowedCarbohydrate.Value
-    Fat: @Double.Round(Meal.Fat, 2)
-    <text>/</text>
-    @AllowedFat.Value
-    Calories: @Double.Round(Meal.Calories, 2)
-</RadzenCard>
+    <h4>Totals</h4>
+    <div class="row py-1">
+        <div class="col-3" style="background-color: greenyellow">
+            @Double.Round(@Meal.Protein, 2)
+            <text>/</text>
+            @AllowedProtein.Value
+        </div>
+        <div class="col-3" style="background-color: #0dcaf0">
+            @Double.Round(Meal.Carbohydrate, 2)
+            <text>/</text>
+            @AllowedCarbohydrate.Value
+        </div>
+        <div class="col-3" style="background-color: yellow">
+            @Double.Round(Meal.Fat, 2)
+            <text>/</text>
+            @AllowedFat.Value
+        </div>
+        <div class="col-3" style="background-color: #babbbc">
+            @Double.Round(Meal.Calories, 2)
+
+        </div>
+    </div>
+
+
+</div>
