--- a/TrackMyMacros.App2/Pages/Index.razor
+++ b/TrackMyMacros.App2/Pages/Index.razor
@@ -5,7 +5,7 @@
 Environment is @env.Environment
 <PageTitle>Index</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Hello, world1!</h1>
 
 Welcome to your new app.
 
