--- a/TrackMyMacros.App2/Pages/MacroBasedDay.razor
+++ b/TrackMyMacros.App2/Pages/MacroBasedDay.razor
@@ -4,58 +4,68 @@
 
 Environment is @env.Environment
 
-hello everyo
+
+<div class="container">
+
+    <RadzenDatePicker DateFormat="MM/dd/yyyy" @bind-Value=@CurrentDate Change="@(args => OnDateCHanged(args))"/>
+</div>
+
+
+@if (_day == null)
+{
+    <p>
+        <em>Loading...</em>
+    </p>
+}
+else
+{
+    var i = 0;
+    <div class="container">
+        @foreach (var meal in @_day.Meals)
+        {
+            <div class="row py-3">
+                <h3>Meal @(i + 1)</h3>
+
+                <MealComponent2 OnMealMacrosChanged="OnMealMacrosChanged" @ref="ComponentRef" Meal="meal" FoodList="@_foodList" AllowedProtein="meal.AllowedProtein"
+                                AllowedCarbohydrate="meal.AllowedCarbohydrate" AllowedFat="meal.AllowedFat" ParentDayModel="_day" MealIndex="i" OnSaveDay="OnSave">
+                </MealComponent2>
+                <div class="row py-1">
+                    <div class="col-3" style="background-color: greenyellow">
+                        @Double.Round(_day.Protein, 2)
+                        <text>/</text>
+                        @_day.AllowedProtein
+                    </div>
+                    <div class="col-3" style="background-color: #0dcaf0">
+                        @Double.Round(_day.Carbohydrate, 2)
+                        <text>/</text>
+                        @_day.AllowedCarbohydrate
+                    </div>
+                    <div class="col-3" style="background-color: yellow">
+                        @Double.Round(_day.Fat, 2)
+                        <text>/</text>
+                        @_day.AllowedFat
+                    </div>
+                    <div class="col-3" style="background-color: #babbbc">
+                        @Double.Round(_day.Calories, 2)
+
+                    </div>
+                </div>
+
+
+                @{ i += 1; }
+
+            </div>
+        }
+    </div>
+}
 
 <div>
-            <RadzenDatePicker DateFormat="MM/dd/yyyy" @bind-Value=@CurrentDate  Change="@(args => OnDateCHanged(args))"/>
-        </div>
-        
-        
-        @if (_day == null)
-        {
-            <p>
-                <em>Loading...</em>
-            </p>
-        }
-        else
-        {
-            @foreach (var meal in @_day.Meals)
-            {
-                <MealComponent2 OnMealMacrosChanged="OnMealMacrosChanged" @ref="ComponentRef" Meal="@meal" FoodList="@_foodList" AllowedProtein="meal.AllowedProtein"
-                               AllowedCarbohydrate="meal.AllowedCarbohydrate" AllowedFat="meal.AllowedFat" ></MealComponent2>
-            }
-        
-        
-        }
-        @if (_day != null)
-        {
-            <span>Total Protein : @Double.Round(@_day.Protein,2)</span>
-            <span>Total Carbs :  @Double.Round(@_day.Carbohydrate,2)</span>
-            <span>Total Fat :  @Double.Round(@_day.Fat,2)</span>
-            <span>Total Cals :  @Double.Round(@_day.Calories,2)</span>
-        
-            @* <div> *@
-            @*     <span>Remaining  Protein : @Double.Round((_day.AllowedProtein-@_day.Protein),2) / @_day.AllowedProtein</span> *@
-            @*     <span>Carbs : @Double.Round(_day.AllowedCarbohydrate-@_day.Carbohydrate,2) / @_day.AllowedCarbohydrate</span> *@
-            @*     <span>Fat : @Double.Round(_day.AllowedFat-@_day.Fat,2) / @_day.AllowedFat</span> *@
-            @*     <span>Cals : @Double.Round(_day.AllowedCalories-@_day.Calories,2) / @_day.AllowedCalories</span> *@
-            @* </div> *@
-            @* *@
-            <div>
-                <span>Remaining  Protein : @Double.Round((_day.AllowedProtein-@_day.Protein),2) / @_day.AllowedProtein</span>
-                <span>Carbs : @Double.Round(_day.AllowedCarbohydrate-@_day.Carbohydrate,2) / @_day.AllowedCarbohydrate</span>
-                <span>Fat : @Double.Round(_day.AllowedFat-@_day.Fat,2) / @_day.AllowedFat</span>
-                <span>Cals : @Double.Round(_day.AllowedCalories-@_day.Calories,2) / @_day.AllowedCalories</span>
-            </div>
-        
-        }
-        
-        <RadzenButton Click="@OnSave" Text="Save" ButtonStyle="ButtonStyle.Primary"/>
-        @* <RadzenButton Click="@OnAddMeal" Text="Add Meal" ButtonStyle="ButtonStyle.Primary"/> *@
-        
-        
-        @if (_noFoodIdSelectedOnOneOrMoreFoodItems)
-        {
-            <div>Please select a food before saving</div>
-        }
+    <RadzenButton Click="@OnSave" Text="Save" ButtonStyle="ButtonStyle.Primary"/>
 
+</div>
+
+
+@if (_noFoodIdSelectedOnOneOrMoreFoodItems)
+{
+    <div>Please select a food before saving</div>
+}
