--- a/TrackMyMacros.App2/Shared/NavMenu.razor
+++ b/TrackMyMacros.App2/Shared/NavMenu.razor
@@ -30,6 +30,11 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="FoodComboList">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Food Combos
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="CreateFood">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Create New Food
             </NavLink>
