--- a/TrackMyMacros.App4/Shared/NavMenu.razor
+++ b/TrackMyMacros.App4/Shared/NavMenu.razor
@@ -50,8 +50,8 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="Day">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Day
+            <NavLink class="nav-link" href="AddNewWeightReading">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Weight Reading
             </NavLink>
         </div>
         <div class="nav-item px-3">
