Completed WeightReadingList.razor

--- a/TrackMyMacros.App4/Shared/NavMenu.razor
+++ b/TrackMyMacros.App4/Shared/NavMenu.razor
@@ -50,8 +50,13 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="WeightReadingList">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Weight Readings
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="AddNewWeightReading">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Weight Reading
+                <span class="oi oi-list-rich" aria-hidden="true"></span>Add Weight Reading
             </NavLink>
         </div>
         <div class="nav-item px-3">
