--- a/TrackMyMacros.App4/Shared/NavMenu.razor
+++ b/TrackMyMacros.App4/Shared/NavMenu.razor
@@ -55,6 +55,11 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="WeightReadingChart">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Weight Reading Chart
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="AddNewWeightReading">
                 <span class="oi oi-list-rich" aria-hidden="true"></span>Add Weight Reading
             </NavLink>
