Add min and max to create food dialog

--- a/TrackMyMacros.App4/Pages/CreateFood.razor
+++ b/TrackMyMacros.App4/Pages/CreateFood.razor
@@ -20,13 +20,13 @@
         Quantity <RadzenNumeric TValue="double" @bind-Value="NewFood.Quantity">Quantity</RadzenNumeric>
     </RadzenCard>
     <RadzenCard>
-        Quantity <RadzenNumeric TValue="double" @bind-Value="NewFood.DefaultQuantity">Default Quantity</RadzenNumeric>
+        Default <RadzenNumeric TValue="double" @bind-Value="NewFood.DefaultQuantity">Default Quantity</RadzenNumeric>
     </RadzenCard>
     <RadzenCard>
-        Quantity <RadzenNumeric TValue="double" @bind-Value="NewFood.Min">Min Quantity</RadzenNumeric>
+        Min <RadzenNumeric TValue="double" @bind-Value="NewFood.Min">Min Quantity</RadzenNumeric>
     </RadzenCard>
     <RadzenCard>
-        Quantity <RadzenNumeric TValue="double" @bind-Value="NewFood.Max">Max Quantity</RadzenNumeric>
+        Max <RadzenNumeric TValue="double" @bind-Value="NewFood.Max">Max Quantity</RadzenNumeric>
     </RadzenCard>
     <RadzenCard>
         UOM :
