Finish min max default quantity handling

--- a/TrackMyMacros.App4/Components/MealFoodItemComponent.razor
+++ b/TrackMyMacros.App4/Components/MealFoodItemComponent.razor
@@ -5,21 +5,23 @@
 
 
     <div class="row g-0 py-1">
-        <div class="col-2 col-sm-1"z>
+        <div class="col-2">
             <RadzenButton Style="padding-right: 0;padding-left: 0;margin-left: 0;margin-right: 0" Click="@RemoveFood" Icon="remove" ButtonStyle="ButtonStyle.Primary"/>
         </div>
-        <div class="col-1 col-sm-1">
-            @FoodAmount.Quantity
-            @* <RadzenNumeric Style="width: auto" Change=@OnChangeQuantity TextAlign="TextAlign.Left" ShowUpDown="false" TValue="double" @bind-Value=@FoodAmount.Quantity></RadzenNumeric> *@
+        <div class="col-10">
+            <RadzenNumeric Style="width: auto" Change=@OnChangeQuantity TextAlign="TextAlign.Left" ShowUpDown="false" TValue="double" @bind-Value=@FoodAmount.Quantity></RadzenNumeric>
         </div>
-        <div class="col-9  col-sm-10">
+
+    </div>
+    <div class="row g-0 py-1">
+
+        <div>
             <RadzenDropDown Style="width: auto" @bind-Value=@SelectedFoodId Data=@FoodList TextProperty="Name" ValueProperty="Id" Change="@(o => OnChangeFood(o))"
                             FilterCaseSensitivity="FilterCaseSensitivity.CaseInsensitive" FilterOperator="StringFilterOperator.StartsWith" AllowFiltering="true"
                             Placeholder="Select Food"/>
         </div>
 
     </div>
-
     <div class="row my-2">
         <div class="col-1">
             <RadzenCheckBox @bind-Value=@SliderDisabled/>
