--- a/TrackMyMacros.App4/Shared/NavMenu.razor
+++ b/TrackMyMacros.App4/Shared/NavMenu.razor
@@ -65,6 +65,16 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="AddNewRecipe">
+                <span class="oi oi-list-rich" aria-hidden="true"></span>Add Recipe
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="RecipeList">
+                <span class="oi oi-list-rich" aria-hidden="true"></span>View Recipes
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="Log">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Log
             </NavLink>
