updating mesocycle works and completing a workout

--- a/TrackMyMacros.App4/Pages/Workout.razor
+++ b/TrackMyMacros.App4/Pages/Workout.razor
@@ -14,3 +14,7 @@ else
 {
     <p>Loading...</p>
 }
+
+
+<RadzenButton Text="Save" ButtonStyle="ButtonStyle.Primary" Click="@OnSave" />
+<RadzenButton Text="Complete" ButtonStyle="ButtonStyle.Primary" Click="@OnComplete" />
