able to complete week and see correct incrementsn

--- a/TrackMyMacros.App4/Components/SetComponent.razor
+++ b/TrackMyMacros.App4/Components/SetComponent.razor
@@ -13,5 +13,9 @@
         <div class="col-3">
             <RadzenNumeric TValue="int" @bind-Value="@Set.Reps">Reps</RadzenNumeric>
         </div>
+
+
+        <RadzenButton Click="@OnSave" Icon="save" ButtonStyle="ButtonStyle.Primary"/>
+
     </div>
 </div>;
