update mesocycle, fixed some bugs meaning that saving was not working properly

--- a/TrackMyMacros.App4/Pages/Workout.razor
+++ b/TrackMyMacros.App4/Pages/Workout.razor
@@ -6,11 +6,11 @@
 {
     if (_meso.CurrentWeekIndex== _meso.TotalWeeks)
     {
-        <p>Week {_meso.CurrentWeekIndex} of {_meso.totalWeeks} (Final Week)</p>
+        <p>Week {@_meso.CurrentWeekIndex} of {@_meso.TotalWeeks} (Final Week)</p>
     }
     else 
     {
-        <p>Week {_meso.CurrentWeekIndex} of {_meso.totalWeeks}</p>
+        <p>Week {@_meso.CurrentWeekIndex} of {@_meso.TotalWeeks}</p>
     }
 
     foreach (var set in CurrentWorkout.Value.Sets)
