added priority and index to set

--- a/TrackMyMacros.App4/Components/CreateFoodComboDialog.razor
+++ b/TrackMyMacros.App4/Components/CreateFoodComboDialog.razor
@@ -1,6 +1,4 @@
-﻿@using TrackMyMacros.Dtos
-
-<div class="container">
+﻿<div class="container">
 <RadzenTextBox @bind-Value="FoodComboName">Name</RadzenTextBox>
 
     <div class="container">
