--- a/TrackMyMacros.App4/Components/FoodListItemComponent.razor
+++ b/TrackMyMacros.App4/Components/FoodListItemComponent.razor
@@ -1,5 +1,4 @@
-﻿@using TrackMyMacros.App4.ViewModels
-<RadzenCard Style="width: 100%; padding: 0;">
+﻿<RadzenCard Style="width: 100%; padding: 0;">
     <div class="row">
         <div class="col-2">
             
