--- a/TrackMyMacros.App4/Components/MealComponent2.razor
+++ b/TrackMyMacros.App4/Components/MealComponent2.razor
@@ -1,6 +1,4 @@
-﻿@using System.Diagnostics
-@using TrackMyMacros.Dtos
-@* <RadzenCard> *@
+﻿@* <RadzenCard> *@
 <div class="container">
     @foreach (var foodAmount in @Meal.FoodAmounts)
     {
