--- a/TrackMyMacros.App4/Components/MoveRemainingMacrosMealItem.razor
+++ b/TrackMyMacros.App4/Components/MoveRemainingMacrosMealItem.razor
@@ -1,5 +1,4 @@
-﻿@using TrackMyMacros.Dtos
-<RadzenCard Variant="IsDonatorMeal ? Variant.Filled : Variant.Flat">
+﻿<RadzenCard Variant="IsDonatorMeal ? Variant.Filled : Variant.Flat">
 
     <h4>Meal @(MealIndex+1)</h4>
 
