--- a/TrackMyMacros.App4/Components/FoodComboAmountsComponent.razor
+++ b/TrackMyMacros.App4/Components/FoodComboAmountsComponent.razor
@@ -1,9 +1,4 @@
-﻿
-
-@using System.Diagnostics
-@using TrackMyMacros.Dtos
-
-<div class="container">
+﻿<div class="container">
     @foreach (var foodAmount in @Meal.FoodAmounts)
     {
         <MealFoodItemComponent SelectedFoodId="@foodAmount.FoodId" OnQuantitiesChanged="@OnQuantitiesChanged" OnRemove="RemoveFoodItem" FoodAmount="@foodAmount"></MealFoodItemComponent>
