can now add extra sets in the front end but not grouped remove models in wrong namespaces

--- a/TrackMyMacros.App4/Components/SetComponent.razor
+++ b/TrackMyMacros.App4/Components/SetComponent.razor
@@ -15,6 +15,7 @@
         </div>
 
 
+        <RadzenButton Click="@OnAddSet" Icon="add" ButtonStyle="ButtonStyle.Primary"/>
         <RadzenButton Click="@OnSave" Icon="save" ButtonStyle="ButtonStyle.Primary"/>
 
     </div>
